--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-  <h1>Vote for an Event</h1>
+  <h1>KBS WISDOM COLLEGE INTER SCHOOL SHEMA</h1>
   <form id="voteForm">
     <input type="text" id="name" placeholder="Your Name" required>
     <input type="text" id="id" placeholder="Your ID" required>
